# contactopensource-with-actix

./: .gitignore  Cargo.toml  README.md
src/: main.rs
static/: demo-session-counter.html  demo-static-page.html  home.html
static/http/status/: 100.html  101.html  102.html  1xx.html  200.html  201.html  202.html  203.html  204.html  205.html  206.html  207.html  208.html  226.html  2xx.html  300.html  301.html  302.html  303.html  304.html  305.html  306.html  307.html  308.html  3xx.html  400.html  401.html  402.html  403.html  404.html  405.html  406.html  407.html  408.html  409.html  410.html  411.html  412.html  413.html  414.html  (+34 more)
